# ing-pdf-to-csv

./: .gitignore  README.md  ing-pdf-to-csv.py  main.py  pyproject.toml  run.sh
src/: __init__.py  ing_pdf_to_csv.py
